# wiyn_benchpipe

./: .gitignore  README.md  benchspek.py  config.py  fibertraces.py  grating.py  pyproject.toml  sparsepak.py
.github/workflows/: pipy_release.yml
src/wiyn_benchpipe/: __init__.py  __main__.py  benchspek.py  config.py  executables.py  fibertraces.py  functions.py  grating.py  spec_and_lines.py
src/wiyn_benchpipe/data/: __init__.py  argon-from-iraf-nir.csv  rousselot2000-ohlines.txt
src/wiyn_benchpipe/data/fiber_references/: hydra_blue_apertures.csv  nirwals_fibermap.csv  nirwals_fibermap_with_positions.csv
src/wiyn_benchpipe/instruments/: __init__.py  nirwals.py  select_instrument.py  sparsepak.py  wiyn_bench.py  wiyn_hydra.py
src/wiyn_benchpipe/instruments/salt/: __init__.py  nirwals.py  salt_rss_mos_ifu.py
src/wiyn_benchpipe/instruments/wiyn/: __init__.py  sparsepak.py  wiyn_bench.py  wiyn_hydra.py
